# pomodoroom

./: .eslintrc.js  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CORE_POLICY.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  biome.json  create_branches_prs.py  create_issues.py  create_issues_v2.py  create_issues_v3.py  fix_timeline.py  index.html  issues.json  issues_v2.json  package-lock.json  package.json  pnpm-lock.yaml  run_tauri.bat  start-with-env.ps1  start.bat  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
-/: latest.json
.claude/: agent-log.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  implementation-task.yml
.github/workflows/: android-release.yml  issue-status-sync.yml  mobile-eas-build.yml  pr-guardrails.yml  release.yml  test.yml
crates/pomodoroom-cli/: Cargo.toml
crates/pomodoroom-cli/src/: common.rs  main.rs  mod.rs
crates/pomodoroom-cli/src/commands/: auth.rs  config.rs  diagnostics.rs  energy.rs  jit.rs  mod.rs  policy.rs  profile.rs  project.rs  recipe.rs  schedule.rs  stats.rs  sync.rs  task.rs  template.rs  timer.rs
crates/pomodoroom-cli/tests/: cli_basic.rs
crates/pomodoroom-core/: Cargo.toml
crates/pomodoroom-core/proptest-regressions/scheduler/: mod.txt
crates/pomodoroom-core/src/: bayesian_tuner.rs  checkin.rs  context_switch.rs  diagnostics.rs  error.rs  events.rs  feature_flags.rs  focus_windows.rs  handoff.rs  interruption_budget.rs  jit_engine.rs  lib.rs  long_break_placement.rs  onboarding.rs  pair_focus.rs  robustness.rs  scoring.rs  simulation.rs
crates/pomodoroom-core/src/calendar/: mod.rs  shard.rs  signed.rs
crates/pomodoroom-core/src/diagnostics/: bundle.rs  mod.rs
crates/pomodoroom-core/src/energy/: curve.rs  mod.rs
crates/pomodoroom-core/src/integrations/: calendar_db.rs  calendar_db_client.rs  discord.rs  github.rs  google.rs  linear.rs  mod.rs  notion.rs  oauth.rs  slack.rs  traits.rs
crates/pomodoroom-core/src/jit/: context.rs  engine.rs  mod.rs  scoring.rs
crates/pomodoroom-core/src/policy/: bundle.rs  compat.rs  editor.rs  experiments.rs  mod.rs
crates/pomodoroom-core/src/recipes/: action.rs  engine.rs  error.rs  executor.rs  log.rs  mod.rs  recipe.rs  store.rs  trigger.rs
crates/pomodoroom-core/src/schedule/: mod.rs
crates/pomodoroom-core/src/scheduler/: mod.rs  slack.rs
crates/pomodoroom-core/src/stats/: break_adherence.rs  estimate_accuracy.rs  interruption_heatmap.rs  mod.rs  split_efficiency.rs
crates/pomodoroom-core/src/storage/: config.rs  database.rs  migrations.rs  mod.rs  schedule_db.rs
crates/pomodoroom-core/src/storage/profiles/: manager.rs  mod.rs  packs.rs  types.rs
crates/pomodoroom-core/src/sync/: calendar_client.rs  calendar_client_tests.rs  conflict_resolver.rs  conflict_resolver_tests.rs  device_id.rs  event_codec.rs  event_codec_tests.rs  mod.rs  sync_engine.rs  sync_engine_tests.rs  sync_queue.rs  sync_queue_tests.rs  types.rs  types_tests.rs
crates/pomodoroom-core/src/task/: carry_over.rs  context.rs  micro_merge.rs  mod.rs  reconciliation.rs  split_templates.rs
crates/pomodoroom-core/src/timeline/: gap.rs  item.rs  mod.rs  priority.rs  proposal.rs
crates/pomodoroom-core/src/timer/: engine.rs  gatekeeper.rs  mod.rs  schedule.rs  streak_decay.rs
crates/pomodoroom-core/tests/: break_adherence_integration.rs  diagnostics_integration.rs  energy_integration.rs  estimate_accuracy_integration.rs  integration_e2e.rs  interruption_heatmap_integration.rs  policy_integration.rs
crates/pomodoroom-core/tests/integration_e2e/: discord_e2e.rs  github_e2e.rs  google_e2e.rs  linear_e2e.rs  mod.rs  notion_e2e.rs  slack_e2e.rs
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  DATA_MODEL.md  DEVELOPMENT.md  INTEGRATION_CAPABILITY_MATRIX.md  ISSUE_EXECUTION_PLAYBOOK.md  MIGRATION.md  RELEASE.md  RELEASING.md  agent-prompt-v2.md  api-reference.md  arch.md  google-tasks-integration.md  implementation-summary.md  ui-redesign-strategy.md
docs/architecture/: TIMER_RESPONSIBILITY_SEPARATION.md
docs/archive/: README.md  agent-prompt.md  design.md
docs/domains/: integrator.md  scheduler.md  ui-dialog.md
docs/issues/: 206-idea-focus-interruption-aware-streak-dec.md  210-idea-split-rule-based-semantic-task-spli.md  211-idea-split-parent-child-chain-for-auto-s.md  212-idea-split-auto-merge-micro-leftovers-be.md  213-idea-split-split-preview-editor-before-c.md  214-idea-split-carry-over-strategy-for-unfin.md  215-idea-schedule-multi-objective-scheduler.md  215-idea-schedule-multi-objective-scoring.md  216-idea-schedule-slack-insertion-policy-for.md  217-idea-schedule-event-driven-replanning-on.md  218-idea-schedule-lane-aware-break-placement.md  219-idea-schedule-hard-soft-constraint-frame.md  221-idea-energy-detect-task-energy-mismatch.md  222-idea-energy-build-low-energy-fallback-qu.md  223-idea-energy-auto-calibrate-pressure-thre.md  224-idea-energy-cognitive-load-estimator-fro.md  225-idea-notify-context-aware-nudge-windows.md  226-idea-notify-break-activity-suggestion-ca.md  228-idea-notify-escalation-ladder-for-ignore.md  235-idea-automation-use-calendar-context-to.md  autopilot-last-run.md  (+11 more)
mobile/: .env.example  .eslintrc.js  App.tsx  README.md  app.json  jest.config.js  package-lock.json  package.json  tsconfig.json
scripts/: agent-autopilot.mjs  check_window_pos.ps1  create-release.sh  generate-latest-json.mjs  generate-latest-json.test.mjs  issue-ensure-labels.mjs  issue-next.mjs  issue-normalize-priority.mjs  issue-pr.mjs  issue-pr.ps1  issue-start.mjs  issue-start.ps1  tauri-release-config.test.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  cache_commands.rs  google_calendar.rs  google_tasks.rs  integration_commands.rs  main.rs  parent_child_sync.rs  pr_focused.rs  recipe_engine.rs  schedule_commands.rs  sync_commands.rs  tray.rs  webhook.rs  window.rs  windows_helpers.rs
src-tauri/src/journal/: entry.rs  mod.rs  recovery.rs  storage.rs
src-tauri/src/metrics/: command.rs  mod.rs
(+389 files in other folders)
