[workspace]
members = [
    "crates/pomodoroom-core",
    "crates/pomodoroom-cli",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
panic = "abort"
