[workspace]
members = [
    "crates/pomodoroom-core",
    "crates/pomodoroom-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
getrandom = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
panic = "abort"
