[package]
name = "pomodoroom-desktop"
version = "1.3.0"
description = "Pomodoroom Desktop App"
authors = ["you"]
edition = "2021"
license = "MIT"

[[bin]]
name = "pomodoroom-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
indexmap = "2"
uuid = "1"
keyring = "0.3.0"
getrandom = "0.3"
base64 = "0.22"
dotenv = "0.15"
windows = { version = "0.61", features = ["Win32_Foundation"] }
open = "5.3"
pomodoroom-core = { path = "../crates/pomodoroom-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
