[package]
name = "pomodoroom-desktop"
version = "1.4.17"
description = "Pomodoroom Desktop App"
authors = ["you"]
edition = "2021"
license = "MIT"

[[bin]]
name = "pomodoroom-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
indexmap = "2"
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
getrandom = "0.3"
base64 = "0.22"
dotenv = "0.15"
open = "5.3"
once_cell = "1.20"
pomodoroom-core = { path = "../crates/pomodoroom-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

