[package]
name = "pomodoroom-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for Pomodoroom"

[[bin]]
name = "pomodoroom-cli"
path = "src/main.rs"

[dependencies]
pomodoroom-core = { path = "../pomodoroom-core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
