[package]
name = "pomodoroom-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for Pomodoroom"
license = "MIT"

[[bin]]
name = "pomodoroom-cli"
path = "src/main.rs"

[dependencies]
pomodoroom-core = { path = "../pomodoroom-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
