[package]
name = "pomodoroom-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Pomodoroom -- timer engine, storage, integrations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
open = "5"
