[package]
name = "pomodoroom-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Pomodoroom -- timer engine, storage, integrations"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
url = "2"
open = "5"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
getrandom = "0.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_pcg = "0.3"
indoc = "2"

[dev-dependencies]
proptest = "1.4"
mockito = "1"
tempfile = "3"
